# barbara_rs

./: Cargo.toml  README.md  build.rs  link.x
.cargo/: config.toml
.github/workflows/: test.yml
helpers/kallsyms_tools/: Cargo.toml
helpers/kallsyms_tools/src/: ldscript.rs  lib.rs  main.rs  symbol.rs
helpers/kallsyms_tools/src/compress/: char_counter.rs  find_best_token.rs  guess_best_token.rs  huffman.rs  make_dic.rs  mod.rs
helpers/xtask/src/: main.rs
libs/bitfield/src/: lib.rs
libs/elf_parser/: Cargo.toml
libs/elf_parser/src/: err.rs  header.rs  ident.rs  lib.rs  raw_section_parser.rs  section_header.rs  section_parser.rs  string_table.rs  struct_parser.rs  symbol.rs  symtab.rs
libs/elf_parser/src/raw/: bits_struct.rs  header.rs  ident.rs  mod.rs  section_header.rs  section_parser.rs  string_table.rs  strtab.rs
libs/huffman/src/: lib.rs
libs/kallsyms/: Cargo.toml
libs/kallsyms/src/: kallsyms.rs  lib.rs  pack.rs  types.rs
libs/kallsyms/src/compress/: char_counter.rs  guess_best_token.rs  make_dic.rs
libs/kallsyms_dec/: Cargo.toml
libs/kallsyms_dec/src/: kallsyms.rs  lib.rs
libs/kallsyms_enc/: Cargo.toml
libs/kallsyms_enc/src/: lib.rs  pack.rs
libs/kallsyms_enc/src/compress/: char_counter.rs  guess_best_token.rs  make_dic.rs
libs/kmp_search/: Cargo.toml
libs/kmp_search/src/: lib.rs
libs/linked_list_allocator/: Cargo.toml
libs/linked_list_allocator/src/: lib.rs
libs/mmio/: Cargo.toml
libs/mmio/src/: lib.rs
libs/posix/: Cargo.toml
libs/posix/src/: lib.rs
libs/stpack/: Cargo.toml
libs/stpack/src/: lib.rs
libs/vfs/: Cargo.toml
libs/vfs/src/: fs_ramfs.rs  fscore.rs  lib.rs
scripts/: kallsyms.py  linker.py
src/: README.md  arm_uart.rs  backtrace.rs  console.rs  handlers.rs  heap.rs  kallsyms.rs  listallocator.rs  main.rs  pl011.rs  reset.s  semihosting.rs
xtask/: Cargo.toml
xtask/src/: main.rs
