[package]
name = "barbara"
version = "0.1.0"
edition = "2021"

[dependencies]
kallsyms = { path = "libs/kallsyms" }
linked_list_allocator = { path = "libs/linked_list_allocator" }

[dependencies.tock-registers]
git = "https://github.com/tock/tock"
rev = "b8f5da9c09373a5bbf48e70e9cef16d669f3cdde"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [
    "xtask",
    "libs/bitfield",
    "libs/kallsyms",
    "libs/linked_list_allocator",
    "libs/vfs",
]
