[package]
name = "barbara"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = { path = "libs/bitfield" }
kallsyms = { path = "libs/kallsyms" }
linked_list_allocator = { path = "libs/linked_list_allocator" }
mmio = { path = "libs/mmio" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [
    "xtask",
    "libs/bitfield",
    "libs/kallsyms",
    "libs/linked_list_allocator",
    "libs/mmio",
    "libs/vfs",
]
