[package]
name = "barbara"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = { path = "libs/bitfield" }
kallsyms = { path = "libs/kallsyms" }
linked_list_allocator = { path = "libs/linked_list_allocator" }
mmio = { path = "libs/mmio" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [
    "helpers/xtask",
    "libs/bitfield",
    "libs/elf_parser",
    "libs/kallsyms",
    "libs/linked_list_allocator",
    "libs/mmio",
    "libs/posix",
    "libs/stpack",
    "libs/vfs",
]
