[package]
name = "kallsyms_tools"
version = "0.1.0"
edition = "2021"
default-run = "tools"

[dependencies]
rustc-demangle = "0.1"
elf_parser = { path = "../../libs/elf_parser" }
kallsyms_enc = { path = "../../libs/kallsyms_enc" }
kallsyms_dec = { path = "../../libs/kallsyms_dec" }
kmp_search = { path = "../../libs/kmp_search" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
rev = "v3.0.0-rc.7"
features = ["derive"]
